--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,3 +70,4 @@
 @import "./blocks/equipment.scss";
 @import "./blocks/sharing-exp.scss";
 @import "./blocks/work-with-us.scss";
+@import "./blocks/services-solutions.scss";
