--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ site_name }}</title>
   {# <link rel="icon" href="favicon.ico"> #}
+  <link rel="preload" as="style" href="css/style.min.css" >
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page__body">
