сделал заготовку под страницу конфигураторов

--- a/src/views/footer.j2
+++ b/src/views/footer.j2
@@ -16,7 +16,7 @@
                 </ul>
               {% endif %}
               {% if link.title == "Оборудование" %}
-                <a class="nav__configurator" href="#!" >Конфигуратор</a>
+                <a class="nav__configurator" href="configurators.html" >Конфигуратор</a>
               {% endif %}
             </li>
           {% endfor %}
