--- a/src/views/header.j2
+++ b/src/views/header.j2
@@ -51,7 +51,7 @@
               </li>
             {% endfor %}
             <li class="menu__item menu__item--configurator">
-              <a class="menu__link menu__link--end menu__link--configurator" href="#!">Конфигуратор</a>
+              <a class="menu__link menu__link--end menu__link--configurator" href="configurators.html">Конфигуратор</a>
             </li>
           </ul>
         </div>
