сделал страничку конфиугураторов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -71,3 +71,4 @@
 @import "./blocks/sharing-exp.scss";
 @import "./blocks/work-with-us.scss";
 @import "./blocks/services-solutions.scss";
+@import "./blocks/conf-about.scss";
