--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -21,3 +21,6 @@ $testcolor: #fffeee;
 // Paddings
 $paddings-mobile: 8px;
 $paddings-desktop: 100px;
+
+//Font
+$jost-font: "Jost", "Arial", sans-serif;
