--- a/src/views/pages/configurators.j2
+++ b/src/views/pages/configurators.j2
@@ -17,6 +17,47 @@
       </div>
     </div>
 
+    <section class="conf-about section">
+      <div class="conf-about__container container">
+        <div class="conf-about__content section__content">
+          <div class="conf-about__main">
+            <h1 class="conf-about__title title">Конфигураторы</h1>
+            <span class="conf-about__sub-title">Соберите оборудование под задачу</span>
+            <p class="conf-about__text">
+              SEO-текст про конфигураторы. Прежде всего, экономическая повестка сегодняшнего дня является качественно новой ступенью направлений прогрессивного развития! Приятно, граждане, наблюдать, как сторонники тоталитаризма в науке, инициированные исключительно синтетически, обнародованы. Как уже неоднократно упомянуто, представители современных социальных резервов набирают популярность среди определенных слоев населения
+            </p>
+            <button class="conf-about__button rcv-cons-button button" type="button">Получить консультацию</button>
+          </div>
+          <ul class="conf-about__list">
+            <li class="conf-about__item">
+              <a class="conf-about__link" href="./configurator-server.html">
+                <span class="conf-about__link-text">Сервер</span>
+                <svg class="conf-about__link-icon" width="25" height="25" viewBox="0 0 25 25">
+                  <use xlink:href="img/sprite.svg#conf-arrow-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="conf-about__item">
+              <a class="conf-about__link" href="./configurator-shd.html">
+                <span class="conf-about__link-text">Сетевое хранилище данных</span>
+                <svg class="conf-about__link-icon" width="25" height="25" viewBox="0 0 25 25">
+                  <use xlink:href="img/sprite.svg#conf-arrow-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="conf-about__item">
+              <a class="conf-about__link" href="./configurator-safe-region.html">
+                <span class="conf-about__link-text">Видеонаблюдение «Безопасный регион»</span>
+                <svg class="conf-about__link-icon" width="25" height="25" viewBox="0 0 25 25">
+                  <use xlink:href="img/sprite.svg#conf-arrow-icon"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     {% include "./blocks/need-help.j2" %}
   </main>
 {% endblock content %}
