--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -72,3 +72,4 @@
 @import "./blocks/work-with-us.scss";
 @import "./blocks/services-solutions.scss";
 @import "./blocks/conf-about.scss";
+@import "./blocks/sfr.scss";
