--- a/src/views/pages/configurator-safe-region.j2
+++ b/src/views/pages/configurator-safe-region.j2
@@ -19,7 +19,129 @@
         </ul>
       </div>
     </div>
-
+    <section class="sfr section">
+      <div class="container">
+        <h1 class="sfr__title title">Конфигуратор программно-технического комплекса видеонаблюдения «Безопасный регион»</h1>
+        <div class="sfr__content section__content">
+          <form class="sfr__form form" action="https://echo.htmlacademy.ru" method="get">
+            <p class="sfr__do-next">
+              Введите количество камер каждого типа:
+            </p>
+            <ul class="sfr__cameras">
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">ММС</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-mmc-cnt">Камера видеонабюдения в местах массового скопления людей</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-mmc-cnt" name="sfr-mmc-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">ГРЗ</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-grz-cnt">Камера для регистрации государственных регистрационных знаков</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-grz-cnt" name="sfr-grz-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">ПВН</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-pvn-cnt">Камера подъездного видеонаблюдения</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-pvn-cnt" name="sfr-pvn-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">ВВН</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-vvn-cnt">Камера внутреннего видеонаблюдения</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-vvn-cnt" name="sfr-vvn-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">МКДН</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-mkdn-cnt">Многоабонентский домофон со встроенной видеокамерой</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-mkdn-cnt" name="sfr-mkdn-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">ТВН</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-tvn-cnt">Камера видеонаблюдения для распознавание лиц на транспорте</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-tvn-cnt" name="sfr-tvn-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">ТГРЗ</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-tgrz-cnt">Камера для регистрации государственных регистрационных знаков на транспорте</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-tgrz-cnt" name="sfr-tgrz-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="sfr__camera">
+                <span class="sfr__camera-short-title">ТСВН</span>
+                <div class="sfr__camera-wrapper">
+                  <label class="sfr__camera-title" for="sfr-tsvn-cnt">Камера салонного видеонаблюдения на транспорте</label>
+                  <div class="sfr__number-field-wrapper">
+                    <input class="sfr__number-field form__field" type="number" id="sfr-tsvn-cnt" name="sfr-tsvn-cnt" value="1" min="0" max="99">
+                    <button class="sfr__clear-button" type="button">
+                      <span class="visually-hidden">Очистить поле.</span>
+                    </button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <div class="sfr__form-footer">
+              <label class="form__label form__label--checkbox">
+                <input class="form__checkbox visually-hidden" type="checkbox" name="sfr-mkd" id="sfr-mkd" value="true" checked>
+                <span class="form__mark"></span>
+                <span class="form__checkbox-label-text">Объект МКД (многоквартирный дом)</span>
+              </label>
+              <label class="form__label form__label--checkbox">
+                <input class="form__checkbox visually-hidden" type="checkbox" name="sfr-netris" id="sfr-netris">
+                <span class="form__mark"></span>
+                <span class="form__checkbox-label-text">Требуется лицензия Netris</span>
+              </label>
+              <button class="sfr__calc-button button" type="button">Рассчитать</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
     {% include "./blocks/our-advantages.j2" %}
   </main>
 {% endblock content %}
